--- a/eda_clusters.ipynb
+++ b/eda_clusters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "42fbb377",
    "metadata": {},
    "outputs": [],
@@ -12,10 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "47582915",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Welcome! Want to learn more? See two factoextra-related books at https://goo.gl/ve3WBa\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(ggplot2)\n",
     "library(ggpubr)\n",
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c39dacf2",
    "metadata": {},
    "outputs": [
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "89b29e2d",
    "metadata": {},
    "outputs": [],
@@ -130,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "06e0aa6e",
    "metadata": {},
    "outputs": [],
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7cfac003",
    "metadata": {},
    "outputs": [],
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "187c7156",
    "metadata": {},
    "outputs": [
@@ -350,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6b8ee3a4",
    "metadata": {},
    "outputs": [],
@@ -362,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b3810b86",
    "metadata": {},
    "outputs": [
@@ -485,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "884d4a30",
    "metadata": {},
    "outputs": [],
@@ -495,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "86434485",
    "metadata": {},
    "outputs": [
@@ -554,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "08f4c8f3",
    "metadata": {},
    "outputs": [],
